--- a/bmall-backstage/src/main/resources/templates/layout.html
+++ b/bmall-backstage/src/main/resources/templates/layout.html
@@ -170,7 +170,7 @@ $(function(){
                         <li><a href="#" class="dropdown-toggle"><i class="icon-group"></i><span class="menu-text"> 系统管理 </span><b class="arrow icon-angle-down"></b></a>
 							<ul class="submenu">
 								<li class="home" seq="11"><a href="/admin/role" title="角色管理"  class="iframeurl"><i class="icon-double-angle-right"></i>角色管理</a></li>
-                                <li class="home" seq="12"><a href="/admin/user" title="管理员" class="iframeurl"><i class="icon-double-angle-right"></i>管理员</a></li>
+                                <li class="home" seq="12"><a href="/admin/user" title="用户管理" class="iframeurl"><i class="icon-double-angle-right"></i>用户管理</a></li>
 								<li class="home" seq="13"><a href="javascript:void(0)" title="个人信息" class="iframeurl"><i class="icon-double-angle-right"></i>个人信息</a></li>
 							</ul>
 						</li>
