--- a/bmall-backstage/src/main/resources/templates/admin/user-list.html
+++ b/bmall-backstage/src/main/resources/templates/admin/user-list.html
@@ -12,8 +12,11 @@
     
     table thead, tbody tr {
         display: table;
-        //width: 100%;
+        width:100%;
         table-layout: fixed;
+    }
+   table thead {
+        width: calc( 100% - 18px);
     }
  </style>
 </head>
@@ -69,12 +72,46 @@
 		}
 		query(params);
 	}
+  function modify_state(id,state){
+		  layer.confirm('是否确定修改状态？', {
+				     btn: ['是','否'] ,//按钮
+					 icon:2,
+				    }, 
+					function(index){
+				      layer.close(index);
+				      var header = $("meta[name='_csrf_header']").attr("content");
+				  	  var token = $("meta[name='_csrf']").attr("content");
+				  		$.ajax({
+				  			   type: "POST",
+				  			   url: '/admin/updateUserState',
+				  			   data:{userId:id,state:state},
+				  			   dataType:'json',
+				  			   beforeSend: function(xhr){
+				  			        xhr.setRequestHeader(header, token);
+				  			    },
+				  			   success: function(result){
+				  				  if(result.code=='0'){
+				  					  startQuery();
+				  				  }else{
+				  					  layer.alert(result.msg,{			
+				  					        icon:2,		
+				  					 }) 
+				  				  }
+				  			   }
+				  		});
+				    }
+				        
+		  );
+	}
+	function toIndex(id){
+		location.href="/admin/editUser/"+id;
+	}
  </script>
  <div class="search_style">
        <form id="searchForm">
        <ul class="search_content clearfix">
-       <li><label class="l_f">角色名</label><input name="roleName" type="text" class="text_add" placeholder="角色名" style=" width:150px"></li>
-       <li><label class="l_f">状态</label><select name="state" style=" width:150px"><option value="">--状态--</option><option value="1">启用</option><option value="0">禁用</option></select></li>
+       <li><label class="l_f">用户名</label><input name="userName" type="text" class="text_add" placeholder="用户名" style=" width:150px"></li>
+       <li><label class="l_f">状态</label><select name="state" style=" width:150px"><option value="">--状态--</option><option value="ENABLE">启用</option><option value="DISABLE">禁用</option></select></li>
        <li><label class="l_f">时间</label><input class="inline laydate-icon" name="startTime">—<input class="inline laydate-icon" name="endTime"></li>
        <li style="width:90px;"><button type="button" class="btn btn-info" onclick="startQuery()"><i class="fa fa-search"></i>查询</button></li>
        <li style="width:90px;"><button type="button" class="btn btn-warning" onclick="toIndex(0)"><i class="fa fa-plus"></i>新增</button></li>
@@ -85,14 +122,14 @@
   <table class="table table-striped table-bordered table-hover" id="sample-table">
        <thead>
 		 <tr>
-            <th width="80px">编号</th>
-            <th width="80px">用户名</th>
-            <th width="120px">真实名</th>
-            <th width="120px">电话</th>
-            <th width="100px">邮箱</th>
-            <th width="150px">创建时间</th>
-            <th width="100px">状态</th>                
-            <th width="250px">操作</th>
+            <th >编号</th>
+            <th >用户名</th>
+            <th >真实名</th>
+            <th >电话</th>
+            <th >邮箱</th>
+            <th >创建时间</th>
+            <th >状态</th>                
+            <th >操作</th>
 			</tr>
 		</thead>
         <tbody id="myData">
@@ -119,9 +156,14 @@
           {{/if_eq}}  
          </td>
          <td class="td-manage">
-          <a onclick="member_stop(this,'10001')" href="javascript:;" title="停用" class="btn btn-xs btn-success"><i class="icon-ok bigger-120"></i></a> 
-          <a title="编辑" onclick="member_edit('510')" href="javascript:;" class="btn btn-xs btn-info"><i class="icon-edit bigger-120"></i></a> 
-          </td>
+           <a title="编辑" onclick="toIndex({{id}})" href="javascript:;"  class="btn btn-xs btn-info" ><i class="fa fa-edit bigger-120"></i></a>        
+         {{#if_eq state 'ENABLE'}}
+           <a title="禁用" href="javascript:;"  onclick="modify_state({{id}},'DISABLE')" class="btn btn-xs btn-warning" ><i class="fa fa-trash  bigger-120"></i></a>
+          {{/if_eq}} 
+          {{#if_eq  state 'DISABLE'}}
+           <a title="启用" href="javascript:;"  onclick="modify_state({{id}},'ENABLE')" class="btn btn-xs btn-success" ><i class="fa fa-check  bigger-120"></i></a>
+          {{/if_eq}} 
+         </td>
     </tr>
 {{/each}}
  </script>	
