--- a/bmall-backstage/src/main/resources/templates/layout.html
+++ b/bmall-backstage/src/main/resources/templates/layout.html
@@ -14,7 +14,7 @@
 		<link rel="stylesheet" href="/assets/css/ace.min.css" />
 		<link rel="stylesheet" href="/assets/css/ace-rtl.min.css" />
 		<link rel="stylesheet" href="/assets/css/ace-skins.min.css" />
-        <link rel="stylesheet" href="/css/style.css"/>
+        <link rel="stylesheet" href="/css/style.css?v=0.02"/>
          <link rel="stylesheet" href="/css/vali/screen.css"/>
          <link href="/assets/css/codemirror.css" rel="stylesheet">
 		<!--[if lte IE 8]>
@@ -171,7 +171,7 @@ $(function(){
 							<ul class="submenu">
 								<li class="home" seq="11"><a href="/admin/role" title="角色管理"  class="iframeurl"><i class="icon-double-angle-right"></i>角色管理</a></li>
                                 <li class="home" seq="12"><a href="/admin/user" title="用户管理" class="iframeurl"><i class="icon-double-angle-right"></i>用户管理</a></li>
-								<li class="home" seq="13"><a href="javascript:void(0)" title="个人信息" class="iframeurl"><i class="icon-double-angle-right"></i>个人信息</a></li>
+								<li class="home" seq="13"><a href="/admin/userinfoView" title="个人信息" class="iframeurl"><i class="icon-double-angle-right"></i>个人信息</a></li>
 							</ul>
 						</li>
 					</ul>
