--- a/bmall-backstage/src/main/resources/static/css/style.css
+++ b/bmall-backstage/src/main/resources/static/css/style.css
@@ -602,7 +602,7 @@ body
 #add_administrator_style textarea{ margin-left:0px;}
 .admin_info_style .form-group input[disabled]{background-color: #FFFFFF !important;}
 .admin_info_style .text_info.add {border: 1px solid #ddd;}
-.admin_info_style .admin_modify_style{ width:400px; border-right:1px solid #dddddd; float:left }
+.admin_info_style .admin_modify_style{ width:400px;margin:0 auto; }
 .admin_info_style  .xinxi,
 .admin_info_style .recording_list{ padding:10px;}
 .admin_info_style  .xinxi .add_sex ,
