--- a/bmall-backstage/src/main/resources/templates/admin/user-info.html
+++ b/bmall-backstage/src/main/resources/templates/admin/user-info.html
@@ -96,6 +96,80 @@ function modify(){
 			}
 		});   
    }
+   
+   //修改密码
+   function change_Password(){
+ 	layer.open({
+    type: 1,
+ 	title:'修改密码',
+ 	area: ['300px','300px'],
+ 	shadeClose: true,
+ 	content: " <div class='change_Pass_style' id='change_Pass' style='display: block;'><ul class='xg_style'><li><label class='label_name'>原&nbsp;&nbsp;密&nbsp;码</label><input name='原密码' type='password' class='' id='password'></li><li><label class='label_name'>新&nbsp;&nbsp;密&nbsp;码</label><input name='新密码' type='password' class='' id='Nes_pas'></li><li><label class='label_name'>确认密码</label><input name='再次确认密码' type='password' class='' id='c_mew_pas'></li></ul></div>",
+ 	btn:['确认修改'],
+ 	yes:function(index, layero){		
+ 		   if ($("#password").val()==""){
+ 			  layer.alert('原密码不能为空!',{
+               title: '提示框',				
+ 				icon:0,
+ 			    
+ 			 });
+ 			return false;
+           } 
+ 		  if ($("#Nes_pas").val()==""){
+ 			  layer.alert('新密码不能为空!',{
+               title: '提示框',				
+ 				icon:0,
+ 			    
+ 			 });
+ 			return false;
+           } 
+ 		   
+ 		  if ($("#c_mew_pas").val()==""){
+ 			  layer.alert('确认新密码不能为空!',{
+               title: '提示框',				
+ 				icon:0,
+ 			    
+ 			 });
+ 			return false;
+           }
+ 		    if(!$("#c_mew_pas").val || $("#c_mew_pas").val() != $("#Nes_pas").val() )
+         {
+             layer.alert('密码不一致!',{
+               title: '提示框',				
+ 				icon:0,
+ 			    
+ 			 });
+ 			 return false;
+         }   
+ 		 else{
+ 		    var header = $("meta[name='_csrf_header']").attr("content");
+ 		    var token = $("meta[name='_csrf']").attr("content");
+ 			$.ajax({
+ 				type : "POST",
+ 				url : '/admin/updatePwd',
+ 				beforeSend: function(xhr){
+ 			        xhr.setRequestHeader(header, token);
+ 			    },
+ 				data : {op:$("#password").val(),np:$("#Nes_pas").val()},
+ 				dataType : 'json',        
+ 				success : function(data) {
+ 					if(data.code=='0'){
+ 						layer.alert("成功",{			
+ 					        icon:1,		
+ 					    }) 
+ 					}else{
+ 						layer.alert(data.msg,{		
+ 					        icon:2,		
+ 					    }) 
+ 					}
+ 			 	   layer.close(index);    
+ 					
+ 				}
+ 			});  
+ 		  }	 
+ 	}
+     });
+ 	  }
 </script>
  <div class="clearfix">
  <div class="admin_info_style">
@@ -144,9 +218,6 @@ function modify(){
             </div>
     </div>
  </div>
-
- <!--修改密码样式-->
-     
 </div>
 </div>
 </html>
