--- a/bmall-backstage/src/main/resources/templates/category/cate-list.html
+++ b/bmall-backstage/src/main/resources/templates/category/cate-list.html
@@ -123,7 +123,7 @@
  <div id="products_style">
      <div class="border clearfix">
        <span class="l_f">
-        <a href="picture-add.html" title="添加商品" class="btn btn-warning Order_form"><i class="icon-plus"></i>添加商品</a>
+        <a href="/product/productAddView" title="添加商品" class="btn btn-warning Order_form"><i class="icon-plus"></i>添加商品</a>
         <a href="/cate/addCateView"  title="添加分类" id="sort_add" class="btn btn-danger Order_form"><i class="icon-plus"></i>添加分类</a>
        </span>
        <span class="r_f">共：<b>2334</b>件商品</span>
