--- a/bmall-backstage/src/main/resources/templates/layout.html
+++ b/bmall-backstage/src/main/resources/templates/layout.html
@@ -177,7 +177,7 @@ $(function(){
 						 <li><a href="#" class="dropdown-toggle"><i class="icon-desktop"></i><span class="menu-text"> 商品管理 </span><b class="arrow icon-angle-down"></b></a>
 							<ul class="submenu">
 								<li class="home" seq="21"><a href="/cate/categoryListView" title="分类管理"  class="iframeurl"><i class="icon-double-angle-right"></i>分类管理</a></li>
-                                <li class="home" seq="22"><a href="/admin/user" title="商品管理" class="iframeurl"><i class="icon-double-angle-right"></i>商品管理</a></li>
+                                <li class="home" seq="22"><a href="/product/productListView" title="商品管理" class="iframeurl"><i class="icon-double-angle-right"></i>商品管理</a></li>
 							</ul>
 						</li>
 					</ul>
