--- a/bmall-backstage/src/main/resources/templates/product/product-add.html
+++ b/bmall-backstage/src/main/resources/templates/product/product-add.html
@@ -562,6 +562,66 @@ $(function(){
 
 	})(jQuery);
 </script>
+
+<SCRIPT th:inline="javascript">
+		var setting = {
+			check: {
+				enable: true,
+				chkStyle: "radio",
+				radioType: "all"
+			},
+			view: {
+				dblClickExpand: false
+			},
+			data: {
+				simpleData: {
+					enable: true
+				}
+			},
+			callback: {
+				onClick: onClick,
+				onCheck: onCheck
+			}
+		};
+		function onClick(e, treeId, treeNode) {
+			var zTree = $.fn.zTree.getZTreeObj("treeDemo");
+			zTree.checkNode(treeNode, !treeNode.checked, null, true);
+			return false;
+		}
+
+		function onCheck(e, treeId, treeNode) {
+			var zTree = $.fn.zTree.getZTreeObj("treeDemo"),
+			nodes = zTree.getCheckedNodes(true),
+			v = "";
+			for (var i=0, l=nodes.length; i<l; i++) {
+				v += nodes[i].name + ",";
+			}
+			if (v.length > 0 ) v = v.substring(0, v.length-1);
+			var cityObj = $("#citySel");
+			cityObj.attr("value", v);
+		}
+
+		function showMenu() {
+			var cityObj = $("#citySel");
+			var cityOffset = $("#citySel").offset();
+			$("#menuContent").css({left:cityOffset.left + "px", top:cityOffset.top + cityObj.outerHeight() + "px"}).slideDown("fast");
+
+			$("body").bind("mousedown", onBodyDown);
+		}
+		function hideMenu() {
+			$("#menuContent").fadeOut("fast");
+			$("body").unbind("mousedown", onBodyDown);
+		}
+		function onBodyDown(event) {
+			if (!(event.target.id == "menuBtn" || event.target.id == "citySel" || event.target.id == "menuContent" || $(event.target).parents("#menuContent").length>0)) {
+				hideMenu();
+			}
+		}
+
+		$(document).ready(function(){
+			$.fn.zTree.init($("#treeDemo"), setting, [[${cateList}]]);
+		});
+	</SCRIPT>
 </head>
 <div class="margin clearfix" layout:fragment="content" seq="22">
   <div class="clearfix side_green" id="add_picture">
@@ -575,7 +635,12 @@ $(function(){
 		</div>
 		<div class=" clearfix cl">
          <label class="form-label col-2">商品分类：</label>
-	     <div class="formControls col-10"><select id="categoryId"><option>==选择分类==</option></select></div>
+	     <div class="formControls col-10"><select name="categoryId">
+	        <option th:each="p:${cateList}" th:value="${p.id}" > 
+	         <span th:if="${p.pId eq 0}" th:text="${p.categoryName}" ></span>
+	         <span th:if="${p.pId ne 0}" th:text="${'--'+ p.categoryName}" ></span>
+	         </option>
+	     </select></div>
 		</div>
 		<div class=" clearfix cl">
 			
