--- a/bmall-backstage/src/main/resources/templates/layout.html
+++ b/bmall-backstage/src/main/resources/templates/layout.html
@@ -178,6 +178,7 @@ $(function(){
 							<ul class="submenu">
 								<li class="home" seq="21"><a href="/cate/categoryListView" title="分类管理"  class="iframeurl"><i class="icon-double-angle-right"></i>分类管理</a></li>
                                 <li class="home" seq="22"><a href="/product/productListView" title="商品管理" class="iframeurl"><i class="icon-double-angle-right"></i>商品管理</a></li>
+                                <li class="home" seq="23"><a href="/product/productAttrView" title="规格管理" class="iframeurl"><i class="icon-double-angle-right"></i>规格管理</a></li>
 							</ul>
 						</li>
 					</ul>
