--- a/bmall-backstage/src/main/resources/templates/product/product-attr-list.html
+++ b/bmall-backstage/src/main/resources/templates/product/product-attr-list.html
@@ -72,17 +72,6 @@
 		}
 		query(params);
 	}
-   function show(id,_this){
-	  $(_this).find('span').text("");
-	  $(_this).removeAttr("onclick");
-      $("#t"+id).after("<tr><td colspan=2></td><td colspan=2>黑色</td><td colspan=2>可用</td><td>修改</td><tr>"); 
-      $(_this).attr("onclick","closed(id,_this)");
-   }
-   function closed(id,_this){
-		  $(_this).find('span').text("+");
-		  $(_this).removeAttr("onclick");
-	      $(_this).attr("onclick","show(id,_this)");
- }
  </script>
  <div class="search_style">
        <form id="searchForm">
@@ -111,17 +100,33 @@
    </table>
 </div>
  <div id="pagination" class="pagination"></div>
+ 
+ <div class="modal fade" id="myModal"  aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog" >
+        <div class="modal-content" >
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title" id="myModalLabel">模态框（Modal）标题</h4>
+            </div>
+            <div class="modal-body">在这里添加一些文本</div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                <button type="button" class="btn btn-primary">提交更改</button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal -->
+    </div>
 	<!-- /.page-content-area -->
 <script id="roleTemplate" type="text/x-handlebars-template">
 {{#each records}}
-<tr id="t{{id}}">
- <td width="50px" onclick="show({{id}},this)"><span>+</span>{{id}}</td>    
+<tr>
+ <td width="50px">{{addOne   @index }}</td>    
  <td width="50px">{{categoryId}}</td>             
  <td width="50px"><u style="cursor:pointer" class="text-primary" onclick="">{{name}}</u></td>
  <td width="50px">{{customTag}}</td>    
  <td width="50px">{{createTime}}</td>  
  <td width="50px">{{createUser}}</td>   
- <td width="50px">属性详情</td>  
+ <td width="50px"><a href="#" data-toggle="modal" data-target="#myModal">详情</a><a href="#">新增</a></td>  
  </tr>
 {{/each}}
  </script>	
