--- a/bmall-backstage/src/main/resources/templates/index.html
+++ b/bmall-backstage/src/main/resources/templates/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout" layout:decorate="~{layout.html}">
- <div class="page-content clearfix" layout:fragment="content">
+ <div class="margin clearfix" layout:fragment="content" seq="0">
+ 
+ <div class="page-content clearfix"  >
  <div class="alert alert-block alert-success">
   <button type="button" class="close" data-dismiss="alert"><i class="icon-remove"></i></button>
   <i class="icon-ok green"></i>欢迎使用<strong class="green">后台管理系统<small>(v1.2)</small></strong>,你本次登录时间为2016年7月12日13时34分，登录IP:192.168.1.110.	
@@ -131,5 +133,6 @@
   </div>
  
  </div>
+     </div>
      </div>
 </html>
