--- a/bmall-backstage/src/main/resources/templates/product/product-add.html
+++ b/bmall-backstage/src/main/resources/templates/product/product-add.html
@@ -15,6 +15,33 @@
 <script type="text/javascript">
 $(function(){
 	var ue = UE.getEditor('editor');
+	 $("select#cate").change(function(){
+		 var categoryId = $(this).val();
+		 $.ajax({
+			   type: "GET",
+			   url: '/product/listAttrByCategory',
+			   data:{categoryId:categoryId},
+			   dataType:'json',
+			   success: function(result){
+				   $("div#attrList").empty();
+				   for(var i=0;i<result.data.length;i++){
+					   appendValue(result.data[i]);
+				   }
+			   }
+		 });
+	  });
+	 
+	 function appendValue(values){
+		 
+		 var str = "<div class='Add_p_s'><label class='form-label col-2'>"+values.name+"：</label><div class='formControls col-2'>";
+		     str+= "<select name='"+values.code+"'  style='width:120px'>";
+		   var items = values.list;
+		   for(var i=0;i<items.length;i++){
+			  str+="<option value='"+items[i].id+"' >"+items[i].name+"</option>";
+		    }
+		     str+="</select></div></div>"
+		 $("div#attrList").append(str);
+	 }
 });
 (function( $ ){
     // 当domReady的时候开始初始化
@@ -621,6 +648,7 @@ $(function(){
 		$(document).ready(function(){
 			$.fn.zTree.init($("#treeDemo"), setting, [[${cateList}]]);
 		});
+		
 	</SCRIPT>
 </head>
 <div class="margin clearfix" layout:fragment="content" seq="22">
@@ -635,7 +663,8 @@ $(function(){
 		</div>
 		<div class=" clearfix cl">
          <label class="form-label col-2">商品分类：</label>
-	     <div class="formControls col-10"><select name="categoryId">
+	     <div class="formControls col-10"><select name="categoryId" id="cate">
+	        <option value="" >分类选择</option> 
 	        <option th:each="p:${cateList}" th:value="${p.id}" > 
 	         <span th:if="${p.pId eq 0}" th:text="${p.categoryName}" ></span>
 	         <span th:if="${p.pId ne 0}" th:text="${'--'+ p.categoryName}" ></span>
@@ -648,34 +677,9 @@ $(function(){
             <label class="form-label col-2">产品编号：</label>
 			<div class="formControls col-2"><input type="text" class="input-text" value="" placeholder="" id="" name=""></div>
             </div>
-			<div class="Add_p_s">
-             <label class="form-label col-2">产&nbsp;&nbsp;&nbsp;&nbsp;地：</label>	
-			 <div class="formControls col-2"><input type="text" class="input-text" value="" placeholder="" id="" name=""></div>
-			</div>
-            <div class="Add_p_s">
-             <label class="form-label col-2">材&nbsp;&nbsp;&nbsp;&nbsp;质：</label>	
-			 <div class="formControls col-2"><input type="text" class="input-text" value="" placeholder="" id="" name=""></div>
-			</div>
             <div class="Add_p_s">
              <label class="form-label col-2">品&nbsp;&nbsp;&nbsp;&nbsp;牌：</label>	
 			 <div class="formControls col-2"><input type="text" class="input-text" value="" placeholder="" id="" name=""></div>
-			</div>
-             <div class="Add_p_s">
-             <label class="form-label col-2">产品重量：</label>	
-			 <div class="formControls col-2"><input type="text" class="input-text" name="weight">kg</div>
-			</div>
-             <div class="Add_p_s">
-             <label class="form-label col-2">单位：</label>	
-			 <div class="formControls col-2"><span class="select-box">
-				<select class="select">
-					<option>请选择</option>
-					<option value="1">件</option>
-					<option value="2">斤</option>
-					<option value="3">KG</option>
-					<option value="4">吨</option>
-					<option value="5">套</option>
-				</select>
-				</span></div>
 			</div>
             <div class="Add_p_s">
              <label class="form-label col-2">展示价格：</label>	
@@ -685,8 +689,7 @@ $(function(){
              <label class="form-label col-2">市场价格：</label>	
 			 <div class="formControls col-2"><input type="text" class="input-text"  name="marketPrice">元</div>
 			</div>
-           
-			
+			<div id="attrList"></div>
 		</div>
 		
 		<div class="clearfix cl">
