--- a/bmall-backstage/src/main/resources/templates/layout.html
+++ b/bmall-backstage/src/main/resources/templates/layout.html
@@ -46,7 +46,7 @@
         <script src="/js/jquery.nicescroll.js" type="text/javascript"></script>
         <script src="/assets/layer/layer.js" type="text/javascript"></script>
         <script src="/js/jquery.validate.js"></script>
-        
+        <script src="/js/bmall.js"></script>
         
 <script type="text/javascript">	
 $(function(){ 
